<resources>
    <string name="app_name">Finance</string>
    <string name="action_finance">Finance</string>
    <string name="action_income">Income</string>
    <string name="action_spending">Spending</string>
    <string name="action_favourites">Favourites</string>
    <string name="financeTitle">Your Finances</string>
    <string name="financeSubtitle">Please enter your income and spendings</string>
    <string name="title">Name</string>
    <string name="addButton">Add</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="financename">Name</string>
    <string name="amount">Amount</string>
    <string name="totalIncome">Total Income</string>
    <string name="totalIncomeSoFar">$ Total</string>
    <string name="totalSpending">Total Spending</string>
    <string name="totalSpendingSoFar">$ Total</string>
    <string name="totalSaved">Total Amount Saved</string>
    <string name="totalSavedSoFar">$ Total</string>
    <string name="incomeTitle">Income</string>
    <string name="spendingTitle">Spending</string>
    <string name="defaultIncomeAmount">00</string>
    <string name="defaultIncomeMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_name">Enter Name</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Finance</string>
    <string name="nav_header_subtitle">See how much you save</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_finance">Finance</string>
    <string name="menu_income">Income</string>
    <string name="menu_spending">Spending</string>
    <string name="menu_favourites">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messageLoading">Please wait while we Connect to the Server...</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="action_edit">Finance</string>
    <string name="action_update">Update</string>

    <string name="message_edit">Please Update your Details Below</string>
    <string name="select_profile_image">Select Profile Picture</string>


</resources>
