<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_menu_spending"
            android:title="@string/menu_finance" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_menu_spending"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_spending"
            android:icon="@drawable/ic_menu_spending"
            android:title="@string/menu_spending" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_favourites" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:title="@string/sign_out" />
            </menu>
        </item>

    </group>

</menu>
